Change log for zeit.web
=======================

2.39 (unreleased)
-----------------

- ZON-2564: Add separate feed `rss-socialflow-facebook-zmo`

- FIX: Retrieve mobile text from the correct field for roost feed

- ZON-2290: Add print CSS

- ZON-2561: Force mobile image for first teaser of authors favorite articles

- FIX: Display bylines on ranking area teasers

- FIX: Fix ZMO pagetitles in articles

- ZON-2566: Edit text for premoderation popup

- MAINT: Have fake solr return real content dates


2.38 (2015-12-16)
-----------------

- HOTFIX: Set correct IVW-ID for new Android Wrapper App

- ZON-2444, ZON-2455, ZON-2456: Author pages with bio, articles and comments

- ZON-2520: Implement RSS feed for Roost

- ZON-2428: Remove "ZEIT ONLINE" from social media meta titles

- MAINT: Fix asset_host etc to allow mounting under an URL prefix (for showcases)

- MAINT: Adjust templates to allow mounting under an URL prefix (for showcases)

- HOTFIX: Author should be able to handle social_pagetitle


2.37 (2015-12-15)
-----------------

- ZON-2545: Adjust padding on printkiosk and snapshot

- ZON-2551: Make ESI work for Instant Articles feed

- FIX: prevent links in links in shop teaser

- MAINT: Allow HTTP exceptions to propagate to the client from Jinja templates

- FIX: Be more defensive in several places:
  * Ignore byline for content with missing content-type
  * Skip gallery entries with missing content-type
  * Skip unresolveable images in Spektrum feed
  * Handle non-ascii user names


2.36 (2015-12-10)
-----------------

- HOTFIX: correct path for Instant Articles

- HOTFIX: Hide separator for empty metadata

- HOTFIX: Fix navigation submenu appearance

- HOTFIX: Display gallery entry captions again

- ZON-2506: Add campaign parameters to ze.tt links


2.35 (2015-12-08)
-----------------

- DEV-968: Distribute new Webtrekk script

- ZON-2446: Implement HTML for Instant Articles

- ZON-2478: Implement RSS feed for Instant Articles
