@@ -972,6 +972,14 @@ def test_article_should_have_large_facebook_and_twitter_images(testbrowser):
         'zeit-online/image/filmstill-hobbit-schlacht-fuenf-hee/wide__1300x731')
 
 
+def test_article_should_have_large_facebook_and_twitter_images(testbrowser):
+    doc = testbrowser('/zeit-online/article/fischer').document
+    assert doc.xpath('//meta[@property="og:image"]/@content')[0].endswith(
+        'zeit-online/cp-content/author_images/Julia_Zange/wide__1300x731')
+    assert doc.xpath('//meta[@name="twitter:image"]/@content')[0].endswith(
+        'zeit-online/cp-content/author_images/Julia_Zange/wide__1300x731')
+
+
 def test_breaking_news_should_have_fallback_sharing_image(
         testbrowser, workingcopy):
     doc = testbrowser('/zeit-online/article/eilmeldungsartikel').document
